data model, api stubs
