# game_server/lupi/api.py
@@ -1,0 +1,20 @@
+def get_rounds():
+    pass
+
+def create_round():
+    pass
+
+def add_vote():
+    pass
+
+def set_round_is_completed():
+    pass
+
+def get_current_round_id():
+    pass
+
+def get_round_result():
+    pass
+
+def get_round():
+    pass
